[package]
name = "rust_learning"
version = "0.1.0"
authors = ["caoyong <edencaox@gmail.com>"]

[[bin]]
name = "guess"
path = "src/guess.rs"

[[bin]]
name = "mutable"
path = "src/mutable.rs"

[[bin]]
name = "shadow"
path = "src/shadowing.rs"

[[bin]]
name = "types"
path = "src/type.rs"

[[bin]]
name = "fn"
path = "src/fn.rs"

[[bin]]
name = "condition"
path = "src/condition.rs"

[[bin]]
name = "loop"
path = "src/loop.rs"

[[bin]]
name="owner"
path = "src/owner.rs"

[[bin]]
name = "ref"
path = "src/ref.rs"

[[bin]]
name = "slice"
path = "src/slice.rs"

[dependencies]
rand = "0.5.5"